Fixed bugs and added name to recipes
