# specs/swagger/openapi.yaml
@@ -180,25 +180,28 @@ paths:
       responses:
         '200':
           description: Food successfully deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Food'
         '401':
           description: User not authenticated
         '404':
           description: Food not found
 
-  /food/{foodId}/environmental-score:
+  /food/{barcode}/environmental-score:
     get:
       tags:
         - food
       summary: Get environmental score of a food
       description: Get an integer describing the environmental score of a single food
       parameters:
-        - name: foodId
+        - name: barcode
           in: path
           description: ID of food to show environmental score of
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: successful operation
@@ -390,6 +393,10 @@ paths:
       responses:
         '200':
           description: Recipe successfully removed
+          content:
+              application/json:
+                schema:
+                    $ref: '#/components/schemas/RecipeFavourite'
         '401':
           description: User not authenticated
         '404':
